force-app/main/default/objects/Course_Details__c/Course_Details__c.object-meta.xml
<CustomObject>
    <label>Course Details</label>
    <nameField>
        <label>Name of the Course</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>