force-app/main/default/objects/Course_Details__c/fields/Fee_after_Discount__c.field-meta.xml
<CustomField>
    <fullName>Fee_after_Discount__c</fullName>
    <formula>IF( of_Marks__c &gt;0.90, 0.10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount with Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>