force-app/main/default/objects/Course_Details__c/fields/of_Marks__c.field-meta.xml
<CustomField>
    <fullName>of_Marks__c</fullName>
    <label>% of Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>