force-app/main/default/objects/Course_Details__c/fields/Total_Fee_after_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_after_Discount__c</fullName>
    <formula>Course_Fee__c - (( Course_Fee__c * Discount__c )+( Course_Fee__c * Fee_after_Discount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee after Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>