force-app/main/default/objects/Course_Details__c/validationRules/DiscountValidate.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountValidate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Discount__c), IF( Course_Fee__c &gt; 0, true,false))</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Please enter the discount to be offered</errorMessage>
</ValidationRule>